<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_gb"  >
    
    <include layout="@layout/module_header" />
     
    <start.widget.CustomEditText
        android:id="@+id/et_login_account"
        style="@style/edittext1"
        android:drawableLeft="@drawable/ic_account"
 	 	android:drawablePadding="5.0dip"
  	 	android:layout_margin="5.0dip" 
 	 	android:hint="@string/accounthint" />

     <start.widget.CustomEditText
        android:id="@+id/et_login_password"
        style="@style/edittext1"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5.0dip"
  	 	android:layout_margin="5.0dip" 
        android:hint="@string/passwordhint" />
     
     <View
         android:layout_width="match_parent"
         android:layout_height="10.0dip" />
     
     <CheckBox
         android:id="@+id/cb_login_autologin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
         android:textSize="18.0dip"
         android:drawablePadding="4.0dip"
         android:textColor="#d0d0d0"
         android:text="@string/autologinttxt" />
     
    <Button 
	    android:id="@+id/btn_login"
	    style="@style/button1"
        android:text="@string/login"/>
    
    <Button 
	    android:id="@+id/btn_register"
	    style="@style/button1"
        android:text="@string/register"/>
    
    <Button 
	    android:id="@+id/btn_reset_password"
	    style="@style/button1"
        android:text="@string/reset_password"/>

</LinearLayout>