<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_gb"
    android:orientation="vertical" >

    <include layout="@layout/module_header" />

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
		    android:padding="15.0dip">
            
		    <LinearLayout
		        android:id="@+id/ll_first_frame"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <start.widget.CustomEditText
	                android:id="@+id/et_phone"
	                style="@style/edittext1"
	                android:hint="@string/accounthint"
	                android:inputType="phone" />
		
		        <View
		            android:layout_width="match_parent"
		            android:layout_height="20.0dip" />
		
		        <Button
		            android:id="@+id/btn_re_get_checksum"
		            style="@style/button1"
		            android:text="@string/getauthcode" />
		
		        <View
		            android:layout_width="match_parent"
		            android:layout_height="20.0dip" />
		
		        <LinearLayout
		            android:id="@+id/ll_main_frame"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
		            android:visibility="gone" >
		
		            <start.widget.CustomEditText
	                    android:id="@+id/et_checksum"
	                    style="@style/edittext1"
	                    android:hint="@string/authcodehint"
	                    android:inputType="number" />
		
		            <View
		                android:layout_width="match_parent"
		                android:layout_height="20.0dip" />
		
		            <start.widget.CustomEditText
	                    android:id="@+id/et_setting_password"
	                    style="@style/edittext1"
	                    android:hint="@string/passwordhint"
	                    android:inputType="textPassword" />
		
		            <View
		                android:layout_width="match_parent"
		                android:layout_height="20.0dip" />
		
		            <start.widget.CustomEditText
	                    android:id="@+id/et_setting_repassword"
	                    style="@style/edittext1"
	                    android:hint="@string/repasswordhint"
	                    android:inputType="textPassword" />
		
		            <View
		                android:layout_width="match_parent"
		                android:layout_height="20.0dip" />
		
		            <Button
		                android:id="@+id/btn_next"
		                style="@style/button1"
		                android:layout_width="match_parent"
		                android:layout_height="45.0dip"
		                android:text="@string/next" />
		
		            <View
		                android:layout_width="match_parent"
		                android:layout_height="10.0dip" />
		            
		        </LinearLayout>
		
		        <RelativeLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical" >
		
		            <TextView
		                android:id="@+id/tvHaveAccount"
		                style="@style/textview1"
		                android:layout_alignParentRight="true"
		                android:onClick="onClick"
		                android:text="@string/haveaccount"
		                android:textColor="#5aa9db" />
		        </RelativeLayout>
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/ll_second_frame"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:visibility="gone">
		        
		        <RelativeLayout
			        android:layout_width="match_parent"
			        android:layout_height="200.0dip"
			        android:background="@drawable/bg1">
		            
		            <TextView
		                android:id="@+id/success_title" 
			           android:layout_width="wrap_content"
			           android:layout_height="wrap_content"
			           android:drawableLeft="@drawable/ic_expression_success"
			           android:drawablePadding="10.0dip"
			           android:gravity="center"
			           android:layout_centerInParent="true"
			           android:textSize="22.0dip"
			           android:textColor="#333333"/> 
		            
		        </RelativeLayout>
		        
		        <View 
		            android:layout_width="match_parent"
		            android:layout_height="15.0dip"/>
		        
		        <Button
		            android:id="@+id/btn_done"
	                style="@style/button1"
	                android:layout_width="match_parent"
	                android:layout_height="45.0dip"
	                android:text="@string/gologin" />
		        
		    </LinearLayout>
	    </LinearLayout>
	    
	</ScrollView>
</LinearLayout>